WP&WR: Pages are hashed into paged-proofs

--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -135,7 +135,7 @@ We define the paged-proofs function $\pagedproofs$ which accepts a series of exp
     \mathbf{s} \mapsto \,&\sq{
       \mathcal{P}_l(\se(
         \var{\mathcal{J}_6(\mathbf{s}, i)},
-        \var{\mathbf{s}_{i\dots+64}}
+        \var{\mathcal{H}^\#(\mathbf{s}_{i\dots+64})}
       ))
       \mid i \orderedin 64\cdot\N_{\ceil{\nicefrac{|\mathbf{s}|}{64}}}
     } \\
