Add missing core field to work report

--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -155,7 +155,7 @@ Formally:
     (\mathbb{P}, \N_\mathsf{C}) &\to \mathbb{W} \\
     (\wpX, c) &\mapsto \begin{cases}
         \error &\when \mathbf{o} \not\in \Y \\
-        \tup{\is{a}{\wpX_\wp¬authorizer}, \mathbf{o}, \is{x}{\wpX_\wp¬context}, s, \mathbf{l}, \mathbf{r}} \!\!\!\!\!&\otherwise
+        \tup{s, \is{x}{\wpX_\wp¬context}, c, \is{a}{\wpX_\wp¬authorizer}, \mathbf{o}, \mathbf{l}, \mathbf{r}} \!\!\!\!\!&\otherwise
     \end{cases}
   \end{aligned}\right.\!\!\!\!\!\!\!
 \end{equation}
