PVM Hostcalls: poke i should be l

--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -740,7 +740,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
       \error &\otherwise\\
     \end{cases} \\
     \using \mathbf{s} &= \begin{cases}
-      \mem_{a\dots+i} &\when \N_{a\dots+i} \in \mathbb{V}_\mathbf{u}\\
+      \mem_{a\dots+l} &\when \N_{a\dots+l} \in \mathbb{V}_\mathbf{u}\\
       \error &\otherwise
     \end{cases}\\
     \using \mathbf{u}' &= \mathbf{u} \exc \begin{cases}
