fix subscript in Eq 175 (#108)
the hash of the payload is defined as `l` in eq 122

--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -192,7 +192,7 @@ The single-service accumulation function, $\Delta_1$, transforms an initial stat
     &\ \begin{aligned}
       g &= \subifnone(\mathbf{f}_s, 0) + \!\!\!\!\sum_{w \in \mathbf{w}, \mathbf{r} \in w_\mathbf{r} , \mathbf{r}_s = s}\!\!\!\!(\mathbf{r}_g) \\
       \mathbf{p} &= \left[ \tup{\begin{alignedat}{3}
-        \is{o&}{\mathbf{r}_o}\ts\is{&l&}{\mathbf{r}_p}\ts\\
+        \is{o&}{\mathbf{r}_o}\ts\is{&l&}{\mathbf{r}_l}\ts\\
         \is{a&}{w_o}\ts\is{&k&}{(w_s)_h}
       \end{alignedat}}
       \,\middle\vert\ 
