--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -481,8 +481,8 @@ Other than the gas-counter which is explicitly defined, elements of \textsc{pvm}
     (\registers'_7, \mathbf{x}'_i, (\mathbf{x}'_\mathbf{u})_\mathbf{d}) &\equiv \begin{cases}
       (\mathbf{x}_i, \text{check}(\text{bump}(\mathbf{x}_i)), (\mathbf{x}_\mathbf{u})_\mathbf{d} \cup \{ \mathbf{x}_i \mapsto \mathbf{a}, \mathbf{x}_s \mapsto \mathbf{s} \}, b) &\when \mathbf{a} \ne \error \wedge b \ge (\mathbf{x}_\mathbf{s})_t \\
       \multicolumn{2}{l}{\quad \where \text{bump}(i \in \N_S) = 2^8 + (i - 2^8 + 42) \bmod (2^{32} - 2^9)}\\
-      (\mathtt{OOB}, \mathbf{x}_T) &\when c = \error \\
-      (\mathtt{CASH}, \mathbf{x}_T) &\otherwise
+      (\mathtt{OOB}, \mathbf{x}_i, (\mathbf{x}_\mathbf{u})_\mathbf{d}) &\when c = \error \\
+      (\mathtt{CASH}, \mathbf{x}_i, (\mathbf{x}_\mathbf{u})_\mathbf{d}) &\otherwise
     \end{cases} \\
   \end{aligned}$\\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
@@ -595,7 +595,7 @@ Other than the gas-counter which is explicitly defined, elements of \textsc{pvm}
         \end{aligned}
       \ \right\} &\when (\mathbf{x}_\mathbf{s})_\mathbf{l}[h, z] \in \{[], [x, y]\},\ y < t - \mathsf{D} \\
       \quad \mathbf{a}_\mathbf{l}[h, z] = (\mathbf{x}_\mathbf{s})_\mathbf{l}[h, z] \doubleplus t &\when |(\mathbf{x}_\mathbf{s})_\mathbf{l}[h, z]| = 1 \\
-      \quad \mathbf{a}_\mathbf{l}[h, z] = [(\mathbf{x}_\mathbf{s})_\mathbf{l}[h, z]_2, t] &\when (\mathbf{x}_\mathbf{s})_\mathbf{l}[h, z] = [x, y, w],\ y < t - \mathsf{D} \\
+      \quad \mathbf{a}_\mathbf{l}[h, z] = [w, t] &\when (\mathbf{x}_\mathbf{s})_\mathbf{l}[h, z] = [x, y, w],\ y < t - \mathsf{D} \\
       \error &\otherwise\\
     \end{cases} \\
     (\registers'_7, \mathbf{x}'_\mathbf{s}) &\equiv \begin{cases}
@@ -645,11 +645,9 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
       \memory_{b_o + i} & \otherwise
     \end{cases} \\
     \registers'_7 &\equiv \begin{cases}
-      \begin{rcases}
-        |\mathbf{v}| & \when \mathbf{v} \ne \none \\
-        \mathtt{NONE} &\otherwise \\
-      \end{rcases} &\when k \ne \error \wedge \mathbb{Z}_{b_o \dots+ b_z} \subset \mathbb{V}^*_{\memory} \\
-      \mathtt{OOB} &\otherwise
+      \mathtt{OOB} &\when h = \error \vee \mathbb{Z}_{b_o \dots+ b_z} \not\subset \mathbb{V}^*_{\memory} \\
+      \mathtt{NONE} &\otherwhen \mathbf{v} = \none \\
+      |\mathbf{v}| &\otherwise \\
     \end{cases}
   \end{aligned}$\\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
@@ -740,7 +738,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
       \error &\otherwise\\
     \end{cases} \\
     \using \mathbf{s} &= \begin{cases}
-      \mem_{a\dots+i} &\when \N_{a\dots+i} \in \mathbb{V}_\mathbf{u}\\
+      \mem_{a\dots+l} &\when \N_{a\dots+l} \in \mathbb{V}_\mathbf{u}\\
       \error &\otherwise
     \end{cases}\\
     \using \mathbf{u}' &= \mathbf{u} \exc \begin{cases}
