--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -77,13 +77,13 @@ We define the queue-editing function $E$, which is essentially a mutator functio
   \end{aligned}\right.
 \end{equation}
 
-We further define the accumulation priority queue function $Q$, which provides the sequence of work-reports which are accumulatable given the work-reports which have hitherto been accumulated and a set of not-yet-accumulated work-reports and their dependencies.
+We further define the accumulation priority queue function $Q$, which provides the sequence of work-reports which are accumulatable given a set of not-yet-accumulated work-reports and their dependencies.
 \begin{equation}
   Q\colon\left\{\begin{aligned}
-    &(\seq{(\mathbb{W}, \{\H\})}, \dict{\H}{\H}) \to \seq{\mathbb{W}} \\
-    &(\mathbf{r}, \mathbf{a}) \mapsto \begin{cases}
-      [] &\when \mathbf{g} = \{\} \\
-      \mathbf{g} \frown Q(E(\mathbf{r}, \srmap(\mathbf{g})), \mathbf{a} \cup \srmap(\mathbf{g}))\!\!\!\! &\otherwise \\
+    &\seq{(\mathbb{W}, \{\H\})} \to \seq{\mathbb{W}} \\
+    &\mathbf{r} \mapsto \begin{cases}
+      [] &\when \mathbf{g} = [] \\
+      \mathbf{g} \frown Q(E(\mathbf{r}, \srmap(\mathbf{g})))\!\!\!\! &\otherwise \\
       \multicolumn{2}{l}{\,\where \mathbf{g} = [w \mid (w, \{\}) \orderedin \mathbf{r}]}
     \end{cases}
   \end{aligned}\right.
@@ -100,7 +100,7 @@ Finally, we define the mapping function $\srmap$ which builds a dictionary of wo
 We may now define the sequence of accumulatable work-reports in this block as $\mathbf{W}^*$:
 \begin{align}
   \using m &= \mathbf{H}_t \bmod \mathsf{E}\\
-  \mathbf{W}^* &\equiv \mathbf{W}^! \frown Q(\mathbf{q}, \accumulatedcup \cup\;\srmap(\mathbf{W}^!)) \\
+  \mathbf{W}^* &\equiv \mathbf{W}^! \frown Q(\mathbf{q}) \\
   \quad\where \mathbf{q} &= E(\wideparen{\ready_{m\dots}} \concat \wideparen{\ready_{\dots m}} \concat \mathbf{W}^Q, \srmap(\mathbf{W}^!))
 \end{align}
 
