Serialization: Define fallback encoding for sets

--- a/text/serialization.tex
+++ b/text/serialization.tex
@@ -118,6 +118,12 @@ In general, dictionaries are placed in the Merkle trie directly (see appendix \r
 %  \forall K, V: \se_D(d \in \dict{K}{V}) \equiv r \suchthat k \in \keys{d} \Leftrightarrow \se(k) \in \keys{r} \wedge \forall k \in \keys{d} : r[\se(k)] = \se(d[k])
 %\end{equation}
 
+\subsubsection{Set Encoding}
+For any values which are sets and don't already have a defined encoding above, we define the serialization of a set as the serialization of the set's elements in proper order. Formally:
+\begin{equation}
+  \se(\{a, b, c, \dots\}) \equiv \se(a) \concat \se(b) \concat \se(c) \concat \dots \where a < b < c < \dots
+\end{equation}
+
 \subsection{Block Serialization}
 
 A block $\mathbf{B}$ is serialized as a tuple of its elements in regular order, as implied in equations \ref{eq:block}, \ref{eq:extrinsic} and \ref{eq:header}. For the header, we define both the regular serialization and the unsigned serialization $\se_U$. Formally:
