Judgments: Fix typo rho[c]_w instead of rho[c]_r

--- a/text/judgments.tex
+++ b/text/judgments.tex
@@ -95,7 +95,7 @@ There are some constraints placed on the composition of this extrinsic: any verd
 We clear any work-reports which we judged as uncertain or invalid from their core:
 \begin{equation}\label{eq:removenonpositive}
   \forall c \in \N_\mathsf{C} : \rho^\dagger[c] = \begin{cases}
-    \none &\!\!\!\!\when \{ (\mathcal{H}(\rho[c]_r), t) \in \verdicts, t < \floor{\nicefrac{2}{3}\mathsf{V}} \} \\
+    \none &\!\!\!\!\when \{ (\mathcal{H}(\rho[c]_w), t) \in \verdicts, t < \floor{\nicefrac{2}{3}\mathsf{V}} \} \\
     \rho[c] &\!\!\!\!\otherwise
   \end{cases}\!\!\!\!\!\!\!
 \end{equation}
