--- a/text/overview.tex
+++ b/text/overview.tex
@@ -49,9 +49,9 @@ Much as in the \emph{YP}, we specify $\Upsilon$ as the implication of formulatin
   \tau' &\prec \mathbf{H} \\
   \beta^\dagger &\prec (\mathbf{H}, \beta) \label{eq:betadagger} \\
   \beta' &\prec (\mathbf{H}, \xtguarantees, \beta^\dagger, \beefycommitmap) \\
-  \gamma' &\prec (\mathbf{H}, \tau, \xttickets, \gamma, \iota, \eta', \kappa') \\
+  \gamma' &\prec (\mathbf{H}, \tau, \xttickets, \gamma, \iota, \eta', \kappa', \psi') \\
   \eta' &\prec (\mathbf{H}, \tau, \eta) \\
-  \kappa' &\prec (\mathbf{H}, \tau, \kappa, \gamma, \psi') \\
+  \kappa' &\prec (\mathbf{H}, \tau, \kappa, \gamma) \\
   \lambda' &\prec (\mathbf{H}, \tau, \lambda, \kappa) \\
   \psi' &\prec (\xtdisputes, \psi) \\
   \delta^\dagger &\prec (\xtpreimages, \delta, \tau') \label{eq:deltadagger} \\
