--- a/text/reporting_assurance.tex
+++ b/text/reporting_assurance.tex
@@ -291,7 +291,7 @@ We require that the set of prerequisite work-packages be disjoint with the set o
 \begin{align}
   &\forall w \in \mathbf{w} : (w_x)_\mathbf{p} \disjoint \keys{w_\mathbf{l}}\\
   &\begin{aligned}
-    &\forall w \in \mathbf{w}, \forall p \in ((w_x)_\mathbf{p} \cup \keys{w_\mathbf{l}}) :\\
+    &\forall w \in \mathbf{w}, \forall p \in (w_x)_\mathbf{p} \cup \keys{w_\mathbf{l}} :\\
     &\quad p \in \mathbf{p} \cup \{ x \mid x \in b_\mathbf{p} ,\, b \in \beta \}
   \end{aligned}
 \end{align}
