--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -41,7 +41,7 @@ We define $\delta^\dagger$ as the state after the integration of the preimages:
 
 Accumulation of a work-package/work-report is deferred in the case that it has a not-yet-fulfilled dependency and is cancelled entirely in the case of an invalid dependency. Dependencies are specified as work-package hashes and in order to know which work-packages have been accumulated already, we maintain a history of what has been accumulated. This history, $\accumulated$, is sufficiently large for an epoch worth of work-reports. For all such reports, we also retain their segment-root in order that we may validate any guarantor-proscribed segment-roots in work-reports prior to accumulation. Formally:
 \begin{align}
-  \accumulated &\in \seq{\dict{\H}{\H}}_\mathsf{E} \\
+  \accumulated &\in \seq{\{\H\}}_\mathsf{E} \\
   \accumulatedcup &\equiv \bigcup_{x \in \accumulated}(x)
 \end{align}
 
@@ -64,14 +64,13 @@ The newly available work-reports, $\mathbf{W}$, are partitioned into two sequenc
 We define the queue-editing function $E$, which is essentially a mutator function for items such as those of $\ready$, parameterized by a dictionary such as the items in $\accumulated$. It is used to update queues of work-reports when some of them are accumulated. Functionally, it removes all entries whose work-report's hash is in the parameter's keys, removes any dependencies which appear in said set and, crucially, removes any entries whose segment-root correspondences diverge from those in the dictionary. Formally:
 \begin{equation}
   E\colon\left\{\begin{aligned}
-      &(\seq{(\mathbb{W}, \{\H\})}, \dict{\H}{\H}) \to \seq{(\mathbb{W}, \{\H\})} \\
+      &(\seq{(\mathbb{W}, \{\H\})}, \{\H\}) \to \seq{(\mathbb{W}, \{\H\})} \\
     &(\mathbf{r}, \mathbf{x}) \mapsto \left[
-      (w, \mathbf{d} \setminus \keys{\mathbf{x}})
+      (w, \mathbf{d} \setminus \mathbf{x})
       \,\middle\vert\,
       \left\{\,\begin{aligned}
         &(w, \mathbf{d}) \orderedin \mathbf{r} ,\\
-        &(w_s)_h \not\in \keys{\mathbf{x}},\\
-        &\mathbf{x} \cup w_\wr¬srlookup = w_\wr¬srlookup \cup \mathbf{x}
+        &(w_s)_h \not\in \mathbf{x}
       \end{aligned}\right.
       \right]
   \end{aligned}\right.
@@ -89,11 +88,11 @@ We further define the accumulation priority queue function $Q$, which provides t
   \end{aligned}\right.
 \end{equation}
 
-Finally, we define the mapping function $\srmap$ which builds a dictionary of work-package hashes to segment-roots from a set of work-reports:
+Finally, we define the mapping function $\srmap$ which extracts all work-package hashes in the segment-root dictionaries of a set of work-reports:
 \begin{equation}
   \srmap\colon\left\{\begin{aligned}
-    \{\mathbb{W}\} &\to \dict{\H}{\H}\\
-    \mathbf{w} &\mapsto \{ ((w_s)_h \mapsto (w_s)_e) \mid w \in \mathbf{w} \}
+    \{\mathbb{W}\} &\to \{\H\}\\
+    \mathbf{w} &\mapsto \{ (w_s)_h \mid w \in \mathbf{w} \}
   \end{aligned}\right.
 \end{equation}
 
