--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -265,6 +265,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\mathsf{G}_T$] The total gas allocated across all cores for Accumulation. May be no smaller than $\mathsf{G}_A\cdot\mathsf{C} + \sum_{g \in \mathcal{V}(\chi_\mathbf{g})}(g)$.
   \item[$\mathsf{H} = 8$] The size of recent history, in blocks.
   \item[$\mathsf{I} = 4$] The maximum amount of work items in a package.
+  \item[$\mathsf{J} = 8$] The maximum sum of dependency items in a work-report.
   \item[$\mathsf{K} = 16$] The maximum number of tickets which may be submitted in a single extrinsic.
   \item[$\mathsf{L} = 14,400$] The maximum age in timeslots of the lookup anchor.
   \item[$\mathsf{N} = 2$] The number of ticket entries per validator.
