--- a/preamble.tex
+++ b/preamble.tex
@@ -179,7 +179,7 @@
 \newcommand*{\registers}{\omega}
 \newcommand*{\memory}{\mu}
 
-\newcommand*{\jamdraftversion}{\input{VERSION}\!\!\!\! Bangkok}
+\newcommand*{\jamdraftversion}{\input{VERSION}\!\!\!\!}
 \newcommand*{\jamdraftversionstring}{\jamdraftversion}
 
 \newcommand*{\makegpbackground}{
